@@ -87,10 +87,28 @@ module Rufus::Edo
     #   db = Rufus::Edo::Cabinet.new(
     #     'data', :type => :hash, :opts => 'ld', :mode => 'w')
     #
-    # === mode
+    # === :mode
     #
     #   * :mode    a set of chars ('r'ead, 'w'rite, 'c'reate, 't'runcate,
     #              'e' non locking, 'f' non blocking lock), default is 'wc'
+    #
+    # === :default and :default_proc
+    #
+    # Much like a Ruby Hash, a Cabinet accepts a default value or a default_proc
+    #
+    #   db = Rufus::Edo::Cabinet.new('data.tch', :default => 'xxx')
+    #   db['fred'] = 'Astaire'
+    #   p db['fred'] # => 'Astaire'
+    #   p db['ginger'] # => 'xxx'
+    #
+    #   db = Rufus::Edo::Cabinet.new(
+    #     'data.tch',
+    #     :default_proc => lambda { |cab, key| "not found : '#{k}'" }
+    #   p db['ginger'] # => "not found : 'ginger'"
+    #
+    # The first arg passed to the default_proc is the cabinet itself, so this
+    # opens up interesting possibilities.
+    #
     #
     # === other parameters
     #
