@@ -258,3 +258,33 @@ describe Rufus::Tokyo::Cabinet do
   behaves_like 'an abstract structure flattening keys and values'
 end
 
+describe 'Rufus::Tokyo::Cabinet with a default value' do
+
+  before do
+    @db = Rufus::Tokyo::Cabinet.new('tmp/cabinet_spec.tch', :default => 'Nemo')
+    @db.clear
+    @db['known'] = 'Ulysse'
+  end
+  after do
+    @db.close
+  end
+
+  behaves_like 'an abstract structure with a default value'
+end
+
+describe 'Rufus::Tokyo::Cabinet with a default_proc' do
+
+  before do
+    @db = Rufus::Tokyo::Cabinet.new(
+      'tmp/cabinet_spec.tch',
+      :default_proc => lambda { |db, k| "default:#{k}" })
+    @db.clear
+    @db['known'] = 'Ulysse'
+  end
+  after do
+    @db.close
+  end
+
+  behaves_like 'an abstract structure with a default_proc'
+end
+
