@@ -148,3 +148,33 @@ describe Rufus::Tokyo::Tyrant do
   behaves_like 'an abstract structure flattening keys and values'
 end
 
+describe 'Rufus::Tokyo::Tyrant with a default value' do
+
+  before do
+    @db = Rufus::Tokyo::Tyrant.new('127.0.0.1', 45000, :default => 'Nemo')
+    @db.clear
+    @db['known'] = 'Ulysse'
+  end
+  after do
+    @db.close
+  end
+
+  behaves_like 'an abstract structure with a default value'
+end
+
+describe 'Rufus::Tokyo::Tyrant with a default_proc' do
+
+  before do
+    @db = Rufus::Tokyo::Tyrant.new(
+      '127.0.0.1',
+      45000,
+      :default_proc => lambda { |db, k| "default:#{k}" })
+    @db.clear
+    @db['known'] = 'Ulysse'
+  end
+  after do
+    @db.close
+  end
+
+  behaves_like 'an abstract structure with a default_proc'
+end
